backend/prod/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-prod
  namespace: willcataco-prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-prod
  template:
    metadata:
      labels:
        app: backend-prod
    spec:
      containers:
      - name: backend
        image: ghcr.io/willcataco-los-papus-y-sebas/willcataco-server:prod-c7f277e915cdccb1ecc4d711dd13f29a6ab71a9b
        ports:
        - containerPort: 8000
