backend/prod/service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-prod
  namespace: willcataco-prod
spec:
  selector:
    app: backend-prod
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
