backend/prod/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress-prod
spec:
  ingressClassName: nginx
  rules:
  - host: api-willcataco.chakisoft.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-prod
            port:
              number: 80
